update to version 0.0.2

--- a/project/demo/Dockerfile
+++ b/project/demo/Dockerfile
@@ -1,6 +1,6 @@
-# Docker file for the Eureka Server
+# Docker file for the test
 #
-# Version 0.0.1
+# Version 0.0.2
 
 #jdk image
 FROM openjdk:8-jre-alpine
@@ -8,10 +8,10 @@ FROM openjdk:8-jre-alpine
 # install
 
 # label for the image
-LABEL Description="Demo Service" Version="0.0.1"
+LABEL Description="Demo Service" Version="0.0.2"
 
 # the version of the archive
-ARG VERSION=0.0.1
+ARG VERSION=0.0.2
 
 # mount the temp volume
 VOLUME /tmp
@@ -22,7 +22,7 @@ ADD target/demo-${VERSION}.jar app.jar
 # touch the archive for timestamp
 RUN sh -c 'touch /app.jar'
 
-EXPOSE 8761
+EXPOSE 8080
 
 # entrypoint to the image on run
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
